EXTRA_DIST = axisref.gif barc.gif baxispo.gif \
	bclear.gif bcross.gif bcurve.gif bdataopn.gif \
	bdatapo.gif bdraw.gif beval.gif bframe.gif \
	bgauss.gif blgndpo.gif bline.gif bload.gif \
	bmark.gif bmath.gif bpoint.gif bpolygon.gif \
	bpreview.gif bprint.gif brect.gif bsave.gif \
	bscale.gif bscundo.gif bsection.gif bsingle.gif \
	bstop.gif btext.gif btrim.gif bzoom.gif \
	iconl.gif winaxis.gif wincoord.gif windata.gif \
	wininfo.gif winlgnd.gif winmerge.gif

htmljaimgdir = $(docdir)/html_ja/img

htmljaimg_DATA = ${EXTRA_DIST}
