EXTRA_DIST = axisref.png barc.png baxispo.png \
	bclear.png bcross.png bcurve.png bdataopn.png \
	bdatapo.png bdraw.png beval.png bframe.png \
	bgauss.png blgndpo.png bline.png bload.png \
	bmark.png bmath.png bpoint.png bpolygon.png \
	bpreview.png bprint.png brect.png bsave.png \
	bscale.png bscundo.png bsection.png bsingle.png \
	bstop.png btext.png btrim.png bzoom.png \
	iconl.png winaxis.png wincoord.png windata.png \
	wininfo.png winlgnd.png winmerge.png move.png

htmljaimgdir = $(docdir)/html_ja/img

htmljaimg_DATA = ${EXTRA_DIST}
