EXTRA_DIST = aclear.jpg addgraph.jpg adialog.jpg \
	alegend.jpg awindow.jpg axispo.jpg \
	axisref.jpg datapo.jpg draw.jpg \
	eval.jpg evaldlg.jpg fdialog.jpg \
	fdialog2.jpg fdialog3.jpg fdup.jpg \
	filedlg.jpg fitdlg.jpg focus.jpg \
	fopen.jpg fwindow.jpg fwindow2.jpg \
	graphc.jpg graphf.jpg graphs.jpg \
	infowin.jpg lapoint.jpg legend.jpg \
	lwindow.jpg math.jpg pointer.jpg \
	scundo.jpg trimming.jpg window.jpg

htmljatutorialdir = $(docdir)/html_ja/tutorial

htmljatutorial_DATA = ${EXTRA_DIST}
