EXTRA_DIST = adialog.jpg alegend.jpg awindow.jpg axisref.jpg		\
	evaldlg.jpg fdialog.jpg fdialog2.jpg fdialog3.jpg fdup.jpg	\
	filedlg.jpg fitdlg.jpg focus.jpg fwindow.jpg fwindow2.jpg	\
	graphc.jpg graphf.jpg graphs.jpg window.png

htmltutorialdir = $(docdir)/html/en/tutorial

htmltutorial_DATA = ${EXTRA_DIST}
