EXTRA_DIST = adialog.png alegend.jpg awindow.png axisref.jpg		\
	evaldlg.png fdialog.png fdialog2.png fdialog3.png fdup.jpg	\
	filedlg.png fitdlg.png focus.jpg fwindow.png fwindow2.jpg	\
	graphc.jpg graphf.jpg graphs.jpg window.png

htmltutorialdir = $(docdir)/html/en/tutorial

htmltutorial_DATA = ${EXTRA_DIST}
