htmldialogdir = $(docdir)/html/ja/dialogs

dist_htmldialog_DATA = axis.png axisbase.png axisfont.png		\
	axisgage.png axisnum.png axispos.png data.png dataplot.png	\
	datafit.png dataload.png datamask.png datamath.png		\
	datamove.png grid.png lgndarc.png lgndgaus.png lgndpath.png	\
	lgndmark.png lgndrect.png lgndtext.png loadngp.png merge.png	\
	pageord.png prefmisc.png save.png parameter.png
