EXTRA_DIST = aclear.png addgraph.jpg adialog.jpg \
	alegend.jpg awindow.jpg axispo.jpg \
	axisref.jpg datapo.jpg draw.png \
	eval.jpg evaldlg.jpg fdialog.jpg \
	fdialog2.jpg fdialog3.jpg fdup.jpg \
	filedlg.jpg fitdlg.jpg focus.jpg \
	fopen.png fwindow.jpg fwindow2.jpg \
	graphc.jpg graphf.jpg graphs.jpg \
	infowin.png lapoint.jpg legend.jpg \
	lwindow.png math.png pointer.jpg \
	scundo.png trimming.jpg window.png

htmltutorialdir = $(docdir)/html/ja/tutorial

htmltutorial_DATA = ${EXTRA_DIST}
