EXTRA_DIST = aclear.png addgraph.png adialog.jpg \
	alegend.jpg awindow.jpg axispo.png \
	axisref.jpg datapo.png draw.png \
	eval.png evaldlg.jpg fdialog.jpg \
	fdialog2.jpg fdialog3.jpg fdup.jpg \
	filedlg.jpg fitdlg.jpg focus.jpg \
	fopen.png fwindow.jpg fwindow2.jpg \
	graphc.jpg graphf.jpg graphs.jpg \
	infowin.png lapoint.png legend.png \
	lwindow.png math.png pointer.png \
	scundo.png trimming.png window.png

htmltutorialdir = $(docdir)/html/ja/tutorial

htmltutorial_DATA = ${EXTRA_DIST}
