htmltutorialdir = $(docdir)/html/ja/tutorial

dist_htmltutorial_DATA = adialog.png alegend.png awindow.png		\
	axisref.png evaldlg.png fdialog.png fdialog2.png fdialog3.png	\
	fdup.png filedlg.png fitdlg.png focus.png fwindow.png		\
	fwindow2.png graphc.png graphf.png graphs.png window.png	\
	setting_bar.png
